--- a/walidacja.html
+++ b/walidacja.html
@@ -146,7 +146,7 @@
     </script>
 </head>
 <body>
-    <form id="oneform" method="get" action="walidacja.html" autocomplete="off">
+    <form id="oneform" method="get" action="" autocomplete="off">
         <fieldset>
             <legend>Rejestracja</legend>
             <p>
