--- a/walidacja.html
+++ b/walidacja.html
@@ -174,7 +174,7 @@
                 <input id="agree" name="checkbox" type="checkbox" required>
             </p>
             <p>
-                <input type="submit" class="submit" value="Zarezerwuj">
+                <input type="submit" class="submit" value="Zarejestruj się">
             </p>
         </fieldset>
     </form>
