--- a/walidacja.html
+++ b/walidacja.html
@@ -3,196 +3,260 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walidacja</title>
+    <title>Rejestracja - Formularz</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/jquery.validation/1.19.5/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script> 
     <style>
+        /* Styl ogólny dla ciała strony */
         body {
             font-family: Arial, sans-serif;
-            background-color: #49934c;
-            margin: 0;
+            margin: 20px;
             padding: 0;
+            background-color: #092e38;
+            color: #d6d6d6;
         }
 
+        /* Styl dla formularza */
         form {
-            max-width: 600px;
-            margin: 50px auto;
+            width: 800px;
+            margin: 0 auto;
+            background: #1b1b1b;
             padding: 20px;
-            background: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            border: 2px solid #015d05;
+            border: 3px solid #d43535;
+            border-radius: 5px;
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.6);
         }
 
-
-        fieldset {
-            border: none;
-            padding: 0;
-        }
-
+        /* Styl dla tytułu formularza */
         legend {
-            font-size: 1.5rem;
-            color: #015d05;
-            margin-bottom: 15px;
+            font-size: 1.8em;
+            font-weight: bold;
+            color: #f05454;
         }
 
-        p {
-            margin-bottom: 15px;
-        }
-
+        /* Styl dla etykiet */
         label {
             display: block;
-            font-weight: bold;
             margin-bottom: 5px;
+            font-weight: bold;
+            color: #d6d6d6; 
         }
 
+        /* Styl dla pól tekstowych i innych elementów */
         input[type="text"],
+        input[type="password"],
         input[type="email"],
-        input[type="url"],
-        input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
+        textarea {
+            width: calc(100% - 20px);
+            padding: 8px;
+            margin-bottom: 15px;
+            border: 1px solid #d43535;
             border-radius: 5px;
-            font-size: 1rem;
+            background-color: #2e2e2e;
+            color: #d6d6d6;
         }
 
+        textarea {
+            resize: vertical;
+        }
+
+        /* Styl dla checkboxów */
         input[type="checkbox"] {
             margin-right: 10px;
         }
 
-        .submit {
-            background-color: #2e7d32;
+        /* Styl dla przycisku zatwierdzenia */
+        input[type="submit"] {
+            background-color: #f05454; 
             color: white;
-            padding: 10px 15px;
+            font-weight: bold;
             border: none;
+            padding: 10px 15px;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 1rem;
         }
 
-        .submit:hover {
-            color: #1b5e20;
+        /* Efekt hover dla przycisku */
+        input[type="submit"]:hover {
+            background-color: #d43535; 
         }
 
-        #newsleter {
-            margin-top: 20px;
-        }
-
+        /* Styl dla komunikatów błędów */
         .error {
-            color: red;
-            font-size: 0.9rem;
-            margin-top: 5px;
+            color: #f05454; 
+            font-size: 1em;
+            font-style: italic;
+        }
+
+        /* Styl dla błędów związanych z tematami */
+        .topic-error {
+            color: #f05454; 
+            font-size: 0.9em;
+            font-weight: bold;
+            font-style: italic;
+            display: none; 
+        }
+
+        /* Ukrycie sekcji tematów domyślnie */
+        .hide {
+            display: none;
         }
     </style>
     <script>
         $(document).ready(function () {
-            $("#oneform").validate({
+            // Konfiguracja walidatora formularza
+            $("#signupForm").validate({
                 rules: {
-                    name: {
+                    firstname: "required", 
+                    lastname: "required",
+                    username: {
                         required: true,
                         minlength: 2
                     },
-                    lastname: {
+                    password: {
                         required: true,
-                        minlength: 2
+                        minlength: 5
+                    },
+                    confirm_password: {
+                        required: true,
+                        minlength: 5,
+                        equalTo: "#password" // Musi być zgodne z polem password
                     },
                     email: {
                         required: true,
                         email: true
                     },
-                    URL: {
-                        required: true,
-                        url: true
+                    topics: {
+                        required: function () {
+                            return $("#newsletter").is(":checked");
+                        },
+                        minlength: 2
                     },
-                    password: {
-                        required: true,
-                        minlength: 8
-                    },
-                    ConfirmPassword: {
-                        required: true,
-                        equalTo: '#password'
-                    },
-                    checkbox: {
-                        required: true
-                    }
+                    agree: "required"
                 },
                 messages: {
-                    name: {
-                        required: "Proszę podać imię",
-                        minlength: "Imię musi mieć co najmniej 2 znaki"
-                    },
-                    lastname: {
-                        required: "Proszę podać nazwisko",
-                        minlength: "Nazwisko musi mieć co najmniej 2 znaki"
-                    },
-                    email: {
-                        required: "Proszę podać adres e-mail",
-                        email: "Proszę podać poprawny adres e-mail"
-                    },
-                    URL: {
-                        required: "Proszę podać adres URL",
-                        url: "Proszę podać poprawny adres URL"
+                    firstname: "To pole jest wymagane.",
+                    lastname: "To pole jest wymagane.",
+                    username: {
+                        required: "Proszę podać nazwę użytkownika.",
+                        minlength: "Nazwa użytkownika musi zawierać co najmniej 2 znaki."
                     },
                     password: {
-                        required: "Proszę podać hasło",
-                        minlength: 'Hasło musi mieć minimum 8 znaków',
+                        required: "Proszę podać hasło.",
+                        minlength: "Hasło musi zawierać co najmniej 5 znaków."
                     },
-                    confirmpassword: {
-                        required: "Proszę podać hasło",
-                        minlength: 'Hasło musi mieć minimum 8 znaków',
-                        equalTo: 'Hasła nie są takie same'
+                    confirm_password: {
+                        required: "Proszę potwierdzić hasło.",
+                        minlength: "Hasło musi zawierać co najmniej 5 znaków.",
+                        equalTo: "Proszę wpisać takie samo hasło jak powyżej."
                     },
-                    checkbox: {
-                        required: "Musisz zaakceptować politykę"
+                    email: {
+                        required: "Proszę podać adres e-mail.",
+                        email: "Proszę podać poprawny adres e-mail."
+                    },
+                    agree: "Proszę zaakceptować naszą politykę.",
+                    topics: ""
+                },
+                errorPlacement: function (error, element) {
+                    if (element.attr("name") === "topics") {
+                        $("#topicsError").show();
+                    } else {
+                        error.insertAfter(element);
                     }
                 },
-                errorElement: "div",
-                errorPlacement: function (error, element) {
-                    error.addClass("error");
-                    error.insertAfter(element);
+                success: function (label, element) {
+                    if ($(element).attr("name") === "topics") {
+                        if ($("input[name='topics']:checked").length >= 2) {
+                            $("#topicsError").hide();
+                        }
+                    }
+                }
+            });
+
+            // Obsługa wyświetlania sekcji tematów, gdy zaznaczone jest "newsletter"
+            const newsletter = $("#newsletter");
+            const topicsSection = $("#topicsSection");
+
+            newsletter.change(function () {
+                if (this.checked) {
+                    topicsSection.removeClass("hide");
+                } else {
+                    topicsSection.addClass("hide");
+                    topicsSection.find("input").prop("checked", false);
+                    $("#topicsError").hide();
+                }
+            });
+
+            // Sprawdzanie liczby zaznaczonych tematów
+            $("input[name='topics']").change(function () {
+                if ($("input[name='topics']:checked").length >= 2) {
+                    $("#topicsError").hide();
+                } else {
+                    $("#topicsError").show();
                 }
             });
         });
     </script>
 </head>
 <body>
-    <form id="oneform" method="get" action="" autocomplete="off">
+    <form id="signupForm" method="post" autocomplete="off">
         <fieldset>
-            <legend>Rejestracja</legend>
+            <legend>Formularz rejestracyjny</legend>
             <p>
-                <label for="firstname">Imię:</label>
-                <input id="firstname" name="name" minlength="2" type="text" required>
+                <label for="firstname">Imię</label>
+                <input id="firstname" name="firstname" type="text">
             </p>
             <p>
-                <label for="lastname">Nazwisko:</label>
-                <input id="lastname" name="lastname" minlength="2" type="text" required>
+                <label for="lastname">Nazwisko</label>
+                <input id="lastname" name="lastname" type="text">
             </p>
             <p>
-                <label for="cemail">Adres e-mail:</label>
-                <input id="cemail" name="email" type="email" required>
+                <label for="username">Nazwa użytkownika</label>
+                <input id="username" name="username" type="text">
             </p>
             <p>
-                <label for="cUrl">URL:</label>
-                <input id="cUrl" name="URL" type="url" required>
+                <label for="password">Hasło</label>
+                <input id="password" name="password" type="password">
             </p>
             <p>
-                <label for="password">Hasło:</label>
-                <input id="password" name="password" minlength="8" type="password" required>
+                <label for="confirm_password">Potwierdź hasło</label>
+                <input id="confirm_password" name="confirm_password" type="password">
             </p>
             <p>
-              <label for="Rpassword">Powtórz hasło</label>
-              <input name="ConfirmPassword" id="Rpassword" minlength="8" type="password" required>
-          </p>
+                <label for="email">Adres e-mail</label>
+                <input id="email" name="email" type="email">
+            </p>
             <p>
-                <label for="agree">Akceptuję politykę(wymagane):</label>
-                <input id="agree" name="checkbox" type="checkbox" required>
+                <label for="agree">Zgadzam się z polityką prywatności
+                <input type="checkbox" id="agree" name="agree"></label>
+            </p>
+            <p>
+                <label for="newsletter">Chcę otrzymywać newsletter (opcjonalnie)
+                <input type="checkbox" id="newsletter" name="newsletter"></label>
             </p>
 
+            <fieldset id="topicsSection" class="hide">
+                <legend>Tematy (wybierz co najmniej dwa)</legend>
+                <p>
+                    <label for="topic_news">
+                        <input type="checkbox" id="topic_news" value="news" name="topics"> Aktualności szkolne
+                    </label>
+                </p>
+                <p>
+                    <label for="topic_tips">
+                        <input type="checkbox" id="topic_tips" value="tips" name="topics"> Porady dla uczniów i rodziców
+                    </label>
+                </p>
+                <p>
+                    <label for="topic_library">
+                        <input type="checkbox" id="topic_library" value="library" name="topics"> Nowości z biblioteki
+                    </label>
+                </p>
+                <p id="topicsError" class="topic-error">Proszę wybrać co najmniej dwa tematy</p>
+            </fieldset>
             <p>
-                <input type="submit" class="submit" value="Zarezerwuj">
+                <input class="submit" type="submit" value="Zatwierdź">
             </p>
-            
         </fieldset>
     </form>
 </body>
