--- a/walidacja.html
+++ b/walidacja.html
@@ -239,17 +239,17 @@
                 <legend>Tematy (wybierz co najmniej dwa)</legend>
                 <p>
                     <label for="topic_news">
-                        <input type="checkbox" id="topic_news" value="news" name="topics"> Aktualności szkolne
+                        <input type="checkbox" id="topic_news" value="news" name="topics"> Aktualności wobec gry
                     </label>
                 </p>
                 <p>
                     <label for="topic_tips">
-                        <input type="checkbox" id="topic_tips" value="tips" name="topics"> Porady dla uczniów i rodziców
+                        <input type="checkbox" id="topic_tips" value="tips" name="topics"> Porady dla graczy
                     </label>
                 </p>
                 <p>
                     <label for="topic_library">
-                        <input type="checkbox" id="topic_library" value="library" name="topics"> Nowości z biblioteki
+                        <input type="checkbox" id="topic_library" value="library" name="topics"> Nowości od naszej firmy
                     </label>
                 </p>
                 <p id="topicsError" class="topic-error">Proszę wybrać co najmniej dwa tematy</p>
